# pyimagevideo

./: .appveyor.yml  .flake8  .gitattributes  .gitignore  .travis.yml  Convert_HDF5_to_AVI.py  Demo_FPS_matplotlib_image.py  Demo_OpenCV_readAVI.py  Demo_OpenCV_writeAVI.py  Demo_findpeaks.py  Demo_image_write_multipage.py  Demo_localBinaryPattern.py  FPS_matplotlib_image.py  HDF5_to_AVI.py  Image_write_multipage.py  MANIFEST.in  OpenCV_readavi.py  OpenCV_readavi_codec.ipynb  OpenCV_readavi_codec.py  README.md  README.rst  RGB_BGR_GBR_conv.py  audio_oct2py.py  audio_octave.m  audio_playback.py  audio_pyaudio.py  audio_pygame.py  audio_pysounddevice.py  demo_findpeaks.m  demo_findpeaks.py  demo_localBinaryPattern.py  diric.py  getaviprop.py  h5pyvideo.py  image_write_multipage.py  imageconv.py  implay.m  lossless.m  matplotlib_avi.py  opencv_numpy_contiguous_copy.py  (+18 more)
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml  old_tifffile_demo.py
pyimagevideo/: __init__.py  imagemultipage.py  videowriter.py  writeavi_opencv.py
tests/: gentestimgs.py  test.py  test_all.py  test_opencv.py  test_scripts.py
