[metadata]
name = pyimagevideo
version = 1.0.0
author = Michael Hirsch, Ph.D.
description = Demos of OpenCV, read/write videos, etc.
url = https://github.com/scivision/pyimagevideo
keywords =
  video
  audio
  media
  ffmpeg
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics :: 3D Rendering
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Graphics :: Viewers
  Topic :: Multimedia :: Sound/Audio :: Players
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  imageio>=2.3

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
io =
  h5py
  scipy
  morecvutils
  scikit-image
  matplotlib>=2.2

[options.entry_points]
console_scripts =


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

