[metadata]
name = pyimagevideo
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Demos of OpenCV, read/write videos, etc.
url = https://github.com/scivision/pyimagevideo
keywords =
  video
  audio
  media
  ffmpeg
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Graphics :: 3D Rendering
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Graphics :: Viewers
  Topic :: Multimedia :: Sound/Audio :: Players
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  Demo_localBinaryPattern.py
  audio_pysounddevice.py
  FPS_matplotlib_image.py
  demo_findpeaks.py
  wavelength2rgb.py
  HDF5_to_AVI.py
  imageconv.py
  writeAVI_imageio.py
  RGB_BGR_GBR_conv.py
  readAVI_imageio.py
  writeAVI_matplotlib.py
  audio_oct2py.py
  readAVI_opencv.py
  writeAVI_opencv.py
  audio_pyaudio.py
  readAVIs_opencv.py
  audio_pygame.py
  scipyByteScaleBug.py
install_requires =
  numpy
  imageio>=2.3

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
io =
  h5py
  scipy
  morecvutils
  scikit-image
  matplotlib>=2.2

[options.entry_points]
console_scripts =
