[metadata]
name = pyimagevideo
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Demos of OpenCV, read/write videos, etc.
url = https://github.com/scivision/pyimagevideo
keywords =
  video
  audio
  media
  ffmpeg
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Multimedia :: Graphics :: 3D Rendering
  Topic :: Multimedia :: Graphics :: Presentation
  Topic :: Multimedia :: Graphics :: Viewers
  Topic :: Multimedia :: Sound/Audio :: Players
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  numpy
  imageio>=2.3

[options.extras_require]
tests =
  pytest
  flake8
  mypy
io =
  h5py
  scipy
  morecvutils
  scikit-image
  matplotlib>=2.2
